Merge branch 'gwtmockito' into 'main'
APPS-7027 Update GwtMockito to prepare for Java 17+

See merge request ggb/geogebra!9957

GitOrigin-RevId: c0022cee954fd648b70d9620fb1e4cb68abbcb22